# onnxruntime-rs

./: Cargo.toml  README.md
.github/workflows/: general.yml
onnxruntime/: Cargo.toml
onnxruntime-sys-ng/: Cargo.toml  build.rs  wrapper.h
onnxruntime-sys-ng/examples/: c_api_sample.rs
onnxruntime/src/: environment.rs  error.rs  lib.rs  memory.rs  session.rs
onnxruntime/src/tensor/: ort_owned_tensor.rs  ort_tensor.rs
