[package]
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>", "Kenan Sulayman <kenan@sly.mn>"]
name = "onnxruntime-ng"
version = "1.15.1"

description = "Wrapper around Microsoft's ONNX Runtime"
documentation = "https://docs.rs/onnxruntime"
homepage = "https://github.com/nbigaouette/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nbigaouette/onnxruntime-rs"

categories = ["science"]
keywords = ["neuralnetworks", "onnx", "bindings"]

[[test]]
name = "integration_tests"
required-features = ["model-fetching"]

[dependencies]
onnxruntime-sys-ng = { path = "../onnxruntime-sys-ng" }

lazy_static = "1.4"
ndarray = "0.15"
thiserror = "1.0"
tracing = "0.1"

# Enabled with 'model-fetching' feature
ureq = { version = "2.1", optional = true }

[dev-dependencies]
image = "^0.24.6"
test-env-log = { version = "^0.2", default-features = false, features = ["trace"] }
tracing-subscriber = "^0.3.17"
ureq = "^2.1"

[features]
# Fetch model from ONNX Model Zoo (https://github.com/onnx/models)
model-fetching = ["ureq"]
# Disable build script; used for https://docs.rs
disable-sys-build-script = ["onnxruntime-sys-ng/disable-sys-build-script"]
generate-bindings = ["onnxruntime-sys-ng/generate-bindings"]
cuda = ["onnxruntime-sys-ng/cuda"]

[package.metadata.docs.rs]
features = ["disable-sys-build-script", "model-fetching"]
